backend: implement create todo api
