# backend/controller/todo/share.go
@@ -9,4 +9,5 @@ var Group = core.NewGroup("/todos")
 
 func init() {
 	Group.Register(core.NewController("/records", http.MethodGet, listTodoRecords))
+	Group.Register(core.NewController("", http.MethodPost, createTodo))
 }
